--- a/Modules/Gadgeteer/LightSense/LightSense.nuspec
+++ b/Modules/Gadgeteer/LightSense/LightSense.nuspec
@@ -11,7 +11,7 @@
     <description>$description$</description>
     <releaseNotes>Initial release of the package.</releaseNotes>
     <copyright>Copyright 2017</copyright>
-    <tags>TinyClr Gadgeteer Button</tags>
+    <tags>TinyClr Gadgeteer LightSense</tags>
     <dependencies>
       <dependency id="GHIElectronics.TinyCLR.Core" version="[0.6.0, 0.7.0)" />
       <dependency id="GHIElectronics.TinyCLR.Devices" version="[0.6.0, 0.7.0)" />
