--- a/Modules/Gadgeteer/DisplayN18/DisplayN18.csproj
+++ b/Modules/Gadgeteer/DisplayN18/DisplayN18.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{93768DF5-E83C-40A1-9ED6-1BB5AF08F244}</ProjectGuid>
+    <ProjectGuid>{E97DFDBF-B620-4ED1-8194-B99113716179}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Bauland.Gadgeteer</RootNamespace>
-    <AssemblyName>Bauland.Gadgeteer.LightSense</AssemblyName>
+    <AssemblyName>Bauland.Gadgeteer.DisplayN18</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NoStdLib>true</NoStdLib>
@@ -25,7 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Bauland.Gadgeteer.LightSense.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Bauland.Gadgeteer.DisplayN18.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,23 +34,17 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Bauland.Gadgeteer.LightSense.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Bauland.Gadgeteer.DisplayN18.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="LightSense.cs" />
+    <Compile Include="Color.cs" />
+    <Compile Include="DisplayN18.cs" />
+    <Compile Include="Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="LightSense.nuspec">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="DisplayN18.nuspec" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="GHIElectronics.TinyCLR.Core" Version="[0.6.0, 0.7.0)" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="GHIElectronics.TinyCLR.Pins" Version="[0.6.0, 0.7.0)" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -68,7 +62,6 @@
   <PropertyGroup>
     <PostBuildEvent>nuget pack "$(ProjectPath)" -Properties Configuration=$(ConfigurationName)
 if defined NUGET_REPOSITORY (echo NUGET_REPOSITORY is defined: %25NUGET_REPOSITORY%25) else (echo NUGET_REPOSITORY is NOT defined; exit 1)
-copy /Y "$(TargetDir)*.nupkg" "$(NUGET_REPOSITORY)"
-</PostBuildEvent>
+copy /Y "$(TargetDir)*.nupkg" "$(NUGET_REPOSITORY)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
