--- a/Tests/testUniversal/testUniversal.csproj
+++ b/Tests/testUniversal/testUniversal.csproj
@@ -44,22 +44,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Bauland.Gadgeteer.Led7R, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Bauland.Gadgeteer.Led7R.0.6.0\lib\net452\Bauland.Gadgeteer.Led7R.dll</HintPath>
+    </Reference>
+    <Reference Include="Bauland.Gadgeteer.Potentiometer, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Bauland.Gadgeteer.Potentiometer.0.6.0\lib\net452\Bauland.Gadgeteer.Potentiometer.dll</HintPath>
+    </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Devices, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\GHIElectronics.TinyCLR.Devices.0.6.0\lib\net452\GHIElectronics.TinyCLR.Devices.dll</HintPath>
     </Reference>
     <Reference Include="GHIElectronics.TinyCLR.Pins, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\GHIElectronics.TinyCLR.Pins.0.6.0\lib\net452\GHIElectronics.TinyCLR.Pins.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Modules\Gadgeteer\Led7R\Led7R.csproj">
-      <Project>{EC7B4578-E960-488B-873C-1075F94E9E3F}</Project>
-      <Name>Led7R</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Modules\Gadgeteer\Potentiometer\Potentiometer.csproj">
-      <Project>{9A936284-644C-45B1-94C9-998FA0F25028}</Project>
-      <Name>Potentiometer</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\GHIElectronics.TinyCLR.Core.0.6.0\build\net452\GHIElectronics.TinyCLR.Core.targets" Condition="Exists('..\..\packages\GHIElectronics.TinyCLR.Core.0.6.0\build\net452\GHIElectronics.TinyCLR.Core.targets')" />
